--- a/styleinvest.css
+++ b/styleinvest.css
@@ -1,85 +1,42 @@
 body{
    background: #ffff; 
 }
-.box{
-    width: 620px;
-    margin: 100px auto;
-    background: #a0a0a0;
-    border-radius: 7px;
-    height: 320px;
-        
-    
-}
-.box .heading{
-    font-family: fantasy;
-    color: red;
-}
-.box0{
+
+.boxB{
 	background: white;
 	width: 620px;
-	margin: 100px auto;
+	margin: 20px auto;
 	border-radius: 7px;
-	height: 350px;
+	height: 190px;
 }
-.box00{
+.boxC{
 	background: white;
 	width: 620px;
-	margin: 100px auto;
+	margin: 20px auto;
 	border-radius: 7px;
-	height: 150px;
+	height: 120px;
+}
+.boxD{
+	background: white;
+	width: 620px;
+	margin: 20px auto;
+	border-radius: 7px;
+	height: 120px;
 	
 }
-.box000{
+.boxE{
 	background: white;
 	width: 620px;
-	margin: 100px auto;
+	margin: 20px auto;
 	border-radius: 7px;
-	height: 150px;
+	height: 120px;
 }
-.box0000{
+.boxF{
 	background: white;
 	width: 620px;
-	margin: 100px auto;
+	margin: 20px auto;
 	border-radius: 7px;
-	height: 150px;
-}
-#parent{
-    list-style: none;
-    width: 100%;
-    height: 100px;
-    margin: 0;
-    padding: 0;
-    white-space: nowrap;
-    
-}
-#parent > li{
-    display: inline-block;
-    width: 33%;
-    height: 100%;
-    background-color: red;
-}
-.box2{
-    width: 630px;
-    margin: 100px auto;
-    background: grey;
-    border-radius: 7px;
-    height: 160px;
-}
-        
-#parent2{
-    list-style: none;
-    width: 100%;
-    height: 100px;
-    margin: 0;
-    padding: 0;
-    white-space: nowrap;
-    
-}
-#parent2 > li{
-    display: inline-block;
-    width: 50%;
-    height: 100%;
-    background-color: red;
+	height: 120px;
 }
 
 }
@@ -141,6 +98,13 @@ body{
     text-align: justify;
     margin: 0 auto;
     width: 30em;
+}
+.boxA{
+	width: 620px;
+	margin: 20px auto;
+	background: white;
+	border-radius: 7px;
+	height: 90px;
 }
 
 
