--- a/stylefaqs.css
+++ b/stylefaqs.css
@@ -4,13 +4,13 @@ body{
 .box{
     width: 1020px;
     margin: 100px auto;
-    background: #a0a0a0;
+    background: #a5d8f3;
     border-radius: 7px;
     box-shadow: 1px 2px 4px #fff
     
 }
 .box .heading{
-    background: #ff4500;
+    background: red;
     border-radius: 7px 7px 8px 8px;
     padding: 10px;
     color: #fff;
