--- a/stylehowitworks.css
+++ b/stylehowitworks.css
@@ -1,24 +1,24 @@
 body{
-   background: #ffff; 
+   background: #a5d8f3; 
 }
 
 .boxB{
 	background: white;
-	width: 620px;
+	width: 1020px;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 190px;
 }
 .boxC{
 	background: white;
-	width: 620px;
+	width: 1020px;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 120px;
 }
 .boxD{
 	background: white;
-	width: 620px;
+	width: 1020px;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 120px;
@@ -26,14 +26,14 @@ body{
 }
 .boxE{
 	background: white;
-	width: 620px;
+	width: 1020px;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 120px;
 }
 .boxF{
 	background: white;
-	width: 620px;
+	width: 1020px;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 120px;
@@ -100,7 +100,7 @@ body{
     width: 30em;
 }
 .boxA{
-	width: 620px;
+	width: 1020px;
 	margin: 20px auto;
 	background: white;
 	border-radius: 7px;
