--- a/styledashboard.css
+++ b/styledashboard.css
@@ -11,7 +11,7 @@ body{
 }
 .box{
 	background: white;
-	width: 630px;
+	width: 60%;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 110px;
@@ -19,7 +19,7 @@ body{
 }
 .box2{
 	background: white;
-	width: 630px;
+	width: 100%;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 110px;
@@ -27,7 +27,7 @@ body{
 }
 .box3{
 	background: white;
-	width: 630px;
+	width: 100%;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 110px;
@@ -35,7 +35,7 @@ body{
 }
 .box4{
 	background: white;
-	width: 630px;
+	width: 100%;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 110px;
@@ -43,7 +43,7 @@ body{
 }
 .box5{
 	background: white;
-	width: 630px;
+	width: 100%;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 110px;
@@ -51,7 +51,7 @@ body{
 }
 .box6{
 	background: white;
-	width: 630px;
+	width: 100%;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 110px;
@@ -59,7 +59,7 @@ body{
 }
 .box7{
 	background: white;
-	width: 630px;
+	width: 100%;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 110px;
@@ -67,7 +67,7 @@ body{
 }
 .box8{
 	background: white;
-	width: 630px;
+	width: 100%;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 110px;
@@ -75,7 +75,7 @@ body{
 }
 .box9{
 	background: white;
-	width: 630px;
+	width: 100%;
 	height: 110px;
 	text-align: center;
 	margin: 20px auto;
@@ -83,7 +83,7 @@ body{
 }
 .box10{
 	background: white;
-	width: 630px;
+	width: 100%;
 	height: 110px;
 	text-align: center;
 	margin: 20px auto;
@@ -91,16 +91,16 @@ body{
 }
 .box11{
 	background: white;
-	width: 630px;
+	width: 100%;
 	margin: 20px auto;
 	border-radius: 7px;
 	height: 110px;
 	text-align: center;
 }
-.wrapper{
-	width: 630px;
+.box12{
+	width: 60%;
 	height: 50px;
-	margin: 40px auto;
+	margin: 20px auto;
 	background: red;
 }
 .center-justified{
