--- a/stylemyinvestments.css
+++ b/stylemyinvestments.css
@@ -1,5 +1,5 @@
 .box{
-    width: 620px;
+    width: 80%;
     margin: 100px auto;
     background: #a0a0a0;
     border-radius: 7px;
@@ -12,7 +12,7 @@
     color: red;
 }
 .box2{
-    width: 630px;
+    width: 80%;
     margin: 100px auto;
     background: grey;
     border-radius: 7px;
